--- a/app/views/user_mailer/registration_confirmation.text.erb
+++ b/app/views/user_mailer/registration_confirmation.text.erb
@@ -3,3 +3,4 @@ Hi
 Thank you for registering! To confirm your registration click the URL below.
 
 <%= confirm_email_user_url(@user.confirm_token) %>
+<!-- <%= confirm_email_user_url(@user['confirm_token']) %>  -->
